--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
     "connect:start": "nx serve connect --port=4400",
-    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,MYSQL,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn mysql:start\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:connect": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c red,red,green,blue,grey,grey,magenta \"delay 5 && yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"delay 22 && wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"delay 25 && yarn connect:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"yarn nx serve web\" \"yarn nx serve bridge-api\"",
-    "bridge:start": "yarn prisma generate && yarn nx serve bridge-api",
+    "bridge:start": "yarn nx serve bridge-api",
     "mysql:start": "docker-compose -f tools/pabau1/docker-compose.yml up -d || (docker-compose -f tools/pabau1/docker-compose.yml down && docker-compose -f tools/pabau1/docker-compose.yml up -d)",
     "hasura:start": "run-script-os",
     "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up -d graphql-engine",
@@ -38,9 +38,9 @@
     "mysql:clean": "docker-compose -f tools/pabau1/docker-compose.yml down -v",
     "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
-    "graphql-codegen:watch": "graphql-codegen --watch",
+    "graphql-codegen:watch": "nodemon -w libs/graphql -x graphql-codegen -e graphql",
     "production:web": "env-cmd -f apps/web/.env.production yarn nx serve",
-    "production:start": "yarn nx run web:export && npx serve dist/apps/web/exported",
+    "production:start": "yarn nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
     "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:workspace && yarn nx affected --all --target=tsc --parallel --skip-nx-cache && yarn nx affected --all --target=lint --parallel --skip-nx-cache && yarn nx affected --all --target=test --parallel --skip-nx-cache",
     "pipeline-checks:slow": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn lint:workspace && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
@@ -70,8 +70,7 @@
     "nexus:generate": "ts-node-dev --transpile-only apps/bridge-api/src/schema --nexus-typegen",
     "bridge:generate": "rm -rf libs/graphql/crm-mutation && prisma format && prisma generate && yarn dotenv-flow -p apps/bridge-api pal g && yarn nexus:generate",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
-    "prepare": "husky install",
-    "postinstall": "graphql-codegen"
+    "postinstall": "concurrently -n HUSKY,PRISMA,GRAPHQL-CODEGEN,PATCH-PACKAGE -c yellow,green \"husky install\" \"prisma generate\" graphql-codegen \"patch-package --patch-dir tools/patches\""
   },
   "resolutions": {
     "**/immer": ">=8.0.1",
@@ -88,12 +87,12 @@
     "**/mini-css-extract-plugin": ">=1.6.0"
   },
   "dependencies": {
-    "@anchan828/nest-sendgrid": "0.5.5",
+    "@anchan828/nest-sendgrid": "0.4.19",
     "@ant-design/icons": "4.6.2",
     "@apollo/client": "3.3.21",
-    "@babel/plugin-transform-object-assign": "7.14.5",
-    "@babel/plugin-transform-react-jsx-source": "7.14.5",
-    "@babel/runtime": "7.14.8",
+    "@babel/plugin-transform-object-assign": "7.12.13",
+    "@babel/plugin-transform-react-jsx-source": "7.12.13",
+    "@babel/runtime": "7.14.6",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
@@ -104,110 +103,110 @@
     "@paljs/cli": "3.6.0",
     "@paljs/nexus": "3.3.3",
     "@prisma/client": "2.28.0",
-    "@react-hook/debounce": "4.0.0",
-    "@sendgrid/mail": "7.4.5",
-    "@sentry/react": "6.10.0",
-    "@sentry/tracing": "6.10.0",
+    "@react-hook/debounce": "^4.0.0",
+    "@sendgrid/mail": "^7.4.4",
+    "@sentry/react": "^6.10.0",
+    "@sentry/tracing": "^6.10.0",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
     "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
     "class-validator": "0.13.1",
     "classnames": "2.3.1",
     "cookie-session": "1.4.0",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "dateformat": "4.5.1",
-    "dayjs": "1.10.6",
+    "dayjs": "^1.10.4",
     "document-register-element": "1.14.10",
-    "dotenv-flow": "3.2.0",
-    "draft-js": "0.11.7",
-    "draftjs-to-html": "0.9.1",
+    "dotenv-flow": "^3.2.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "env-cmd": "10.1.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
+    "eslint-plugin-unicorn": "31.0.0",
     "file-loader": "6.2.0",
     "formik": "2.2.9",
     "formik-antd": "2.0.1",
-    "gocardless-nodejs": "2.1.0",
+    "gocardless-nodejs": "^2.1.0",
     "google-libphonenumber": "3.2.22",
     "graphql": "15.5.1",
     "graphql-middleware": "6.0.10",
-    "graphql-scalars": "1.10.0",
+    "graphql-scalars": "1.9.3",
     "graphql-shield": "7.5.0",
-    "highcharts": "9.1.2",
+    "highcharts": "9.0.1",
     "highcharts-react-official": "3.0.0",
-    "html-to-image": "1.7.0",
-    "i18n-iso-countries": "6.8.0",
-    "i18next": "20.3.5",
-    "i18next-browser-languagedetector": "6.1.2",
+    "html-to-image": "1.6.1",
+    "i18n-iso-countries": "6.7.0",
+    "i18next": "20.2.2",
+    "i18next-browser-languagedetector": "6.1.0",
     "i18next-xhr-backend": "3.2.2",
     "inflected": "2.1.0",
     "jsonwebtoken": "8.5.1",
     "less": "3.13.1",
     "less-loader": "7.3.0",
     "less-vars-to-js": "1.3.0",
-    "lodash": "4.17.21",
-    "mammoth": "1.4.17",
+    "lodash": "^4.17.21",
+    "mammoth": "^1.4.16",
     "moment": "2.29.1",
     "next": "10.0.9",
     "next-images": "1.7.0",
     "next-plugin-antd-less": "0.3.0",
-    "nexus": "1.1.0",
+    "nexus": "1.0.0",
     "node-fetch": "2.6.1",
-    "open-cli": "7.0.0",
+    "open-cli": "6.0.1",
     "preferred-locale": "1.0.10",
-    "r7insight_node": "3.1.1",
+    "r7insight_node": "2.1.1",
     "rc-queue-anim": "1.8.5",
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-color": "2.19.3",
-    "react-confetti": "6.0.1",
+    "react-confetti": "^6.0.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-countdown": "2.3.2",
     "react-cropper": "2.1.7",
     "react-custom-scrollbars": "4.2.1",
     "react-device-detect": "1.17.0",
     "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "1.14.7",
-    "react-google-maps": "9.4.5",
-    "react-google-places-autocomplete": "3.3.2-alpha.0",
-    "react-grid-layout": "1.2.5",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "3.3.0",
+    "react-grid-layout": "1.2.4",
     "react-highlight-words": "0.17.0",
-    "react-html-parser": "2.0.2",
-    "react-i18next": "11.11.4",
-    "react-image-crop": "8.6.12",
-    "react-indiana-drag-scroll": "2.0.1",
-    "react-jsx-highcharts": "4.3.1",
+    "react-html-parser": "^2.0.2",
+    "react-i18next": "11.8.13",
+    "react-image-crop": "8.6.9",
+    "react-indiana-drag-scroll": "^2.0.1",
+    "react-jsx-highcharts": "4.2.1",
     "react-lottie": "1.2.3",
-    "react-number-format": "4.6.4",
-    "react-pdf": "5.3.2",
+    "react-number-format": "4.5.5",
+    "react-pdf": "5.2.0",
     "react-phone-input-2": "2.14.0",
     "react-quill": "1.3.5",
-    "react-signature-canvas": "1.0.3",
-    "react-sortable-hoc": "2.0.0",
+    "react-signature-canvas": "^1.0.3",
+    "react-sortable-hoc": "1.11.0",
     "react-string-replace": "0.4.4",
     "react-use": "17.2.4",
-    "react-vertical-timeline-component": "3.3.3",
-    "recompose": "0.30.0",
+    "react-vertical-timeline-component": "^3.3.3",
+    "recompose": "^0.30.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.6.7",
     "sql-template-tag": "4.0.0",
     "storybook-addon-i18next": "1.3.0",
     "string-to-color": "2.2.2",
-    "stripe": "8.167.0",
-    "subscriptions-transport-ws": "0.9.19",
+    "stripe": "^8.150.0",
+    "subscriptions-transport-ws": "0.9.18",
     "ts-node-dev": "1.1.8",
-    "tslib": "2.3.0",
+    "tslib": "2.2.0",
     "uuid": "8.3.2",
-    "wait-on": "6.0.0",
+    "wait-on": "5.3.0",
     "yup": "0.32.9"
   },
   "devDependencies": {
-    "eslint-plugin-tsdoc": "0.2.14",
-    "eslint-plugin-unicorn": "34.0.1",
-    "@babel/core": "7.14.8",
-    "@babel/plugin-proposal-private-property-in-object": "7.14.5",
-    "@babel/plugin-transform-runtime": "7.14.5",
-    "@babel/preset-env": "7.14.8",
-    "@babel/preset-react": "7.14.5",
-    "@babel/preset-typescript": "7.14.5",
+    "@babel/core": "7.13.10",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.0",
+    "@babel/plugin-transform-runtime": "7.13.10",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.13.0",
     "@graphql-codegen/add": "2.0.2",
     "@graphql-codegen/cli": "1.21.8",
     "@graphql-codegen/fragment-matcher": "2.0.1",
@@ -221,90 +220,90 @@
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
     "@graphql-codegen/typescript-resolvers": "1.20.0",
     "@ls-lint/ls-lint": "1.10.0",
-    "@nestjs/cli": "8.1.0",
-    "@nestjs/schematics": "8.0.2",
-    "@nestjs/testing": "8.0.5",
-    "@nrwl/cli": "12.6.3",
-    "@nrwl/cypress": "12.6.3",
-    "@nrwl/eslint-plugin-nx": "12.6.3",
-    "@nrwl/jest": "12.6.3",
-    "@nrwl/linter": "12.6.3",
-    "@nrwl/nest": "12.6.3",
-    "@nrwl/next": "12.6.3",
-    "@nrwl/node": "12.6.3",
-    "@nrwl/react": "12.6.3",
-    "@nrwl/storybook": "12.6.3",
-    "@nrwl/tao": "12.6.3",
-    "@nrwl/web": "12.6.3",
-    "@nrwl/workspace": "12.6.3",
-    "@storybook/addon-a11y": "6.3.6",
-    "@storybook/addon-essentials": "6.3.6",
-    "@storybook/addon-storysource": "6.3.6",
-    "@storybook/react": "6.3.6",
-    "@testing-library/react": "12.0.0",
-    "@types/dotenv-flow": "3.1.1",
-    "@types/googlemaps": "3.43.3",
+    "@nestjs/cli": "7.5.6",
+    "@nestjs/schematics": "7.3.0",
+    "@nestjs/testing": "7.6.15",
+    "@nrwl/cli": "12.5.8",
+    "@nrwl/cypress": "12.5.8",
+    "@nrwl/eslint-plugin-nx": "12.5.8",
+    "@nrwl/jest": "12.5.8",
+    "@nrwl/linter": "12.5.8",
+    "@nrwl/nest": "12.5.8",
+    "@nrwl/next": "12.5.8",
+    "@nrwl/node": "12.5.8",
+    "@nrwl/react": "12.5.8",
+    "@nrwl/storybook": "12.5.8",
+    "@nrwl/tao": "12.5.8",
+    "@nrwl/web": "12.5.8",
+    "@nrwl/workspace": "12.5.8",
+    "@storybook/addon-a11y": "6.3.2",
+    "@storybook/addon-essentials": "6.3.2",
+    "@storybook/addon-storysource": "6.3.2",
+    "@storybook/react": "6.3.2",
+    "@testing-library/react": "11.2.6",
+    "@types/dotenv-flow": "^3.1.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jest": "26.0.24",
-    "@types/jsonwebtoken": "8.5.4",
-    "@types/node": "16.4.7",
+    "@types/jsonwebtoken": "8.5.1",
+    "@types/node": "15.0.2",
     "@types/pluralize": "0.0.29",
-    "@types/react": "17.0.15",
-    "@types/react-custom-scrollbars": "4.0.8",
-    "@types/react-dom": "17.0.9",
-    "@types/react-grid-layout": "1.1.2",
-    "@types/shelljs": "0.8.9",
+    "@types/react": "17.0.5",
+    "@types/react-custom-scrollbars": "4.0.7",
+    "@types/react-dom": "17.0.4",
+    "@types/react-grid-layout": "1.1.1",
+    "@types/shelljs": "^0.8.8",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
     "@vercel/node": "1.11.1",
     "apollo-server-testing": "2.24.0",
-    "atob": "2.1.2",
-    "async-retry": "1.3.1",
+    "atob": "^2.1.2",
     "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
     "bitbucket": "2.6.2",
     "concurrently": "6.1.0",
     "cypress": "^6",
-    "danger": "10.6.6",
+    "danger": "^10.6.4",
     "dotenv": "9.0.2",
-    "dotenv-flow-cli": "1.0.0",
+    "dotenv-flow-cli": "^1.0.0",
     "eslint": "7.32.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
     "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-json-format": "2.0.1",
+    "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-rebase": "0.1.1",
     "eslint-plugin-sonarjs": "0.9.1",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
     "graphql-inspector": "0.5.1",
-    "husky": "7.0.1",
+    "husky": "5.2.0",
     "jest": "27.0.6",
-    "jest-fail-on-console-reporter": "0.1.0",
-    "jest-silent-reporter": "0.5.0",
-    "lint-staged": "11.1.1",
-    "micromatch": "4.0.4",
-    "next-page-tester": "0.27.2",
-    "nodemon": "2.0.12",
-    "patch-package": "6.4.7",
+    "jest-fail-on-console-reporter": "^0.1.0",
+    "jest-silent-reporter": "^0.5.0",
+    "lint-staged": "^11.0.0",
+    "micromatch": "^4.0.4",
+    "next-page-tester": "0.24.1",
+    "nodemon": "^2.0.7",
+    "patch-package": "^6.4.7",
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
     "prettier": "2.2.1",
     "prisma": "2.28.0",
     "react-cookie": "4.0.3",
     "react-docgen-typescript": "1.22.0",
     "react-test-renderer": "17.0.2",
-    "rimraf": "3.0.2",
-    "run-script-os": "1.1.6",
+    "rimraf": "^3.0.2",
+    "run-script-os": "^1.1.6",
     "shx": "0.3.3",
-    "ts-jest": "27.0.4",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.3.5",
-    "vercel": "23.0.1",
+    "vercel": "^23.0.1",
     "yaml-loader": "0.6.0"
   },
   "bump-rebuild-all": 49,
