--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "update": "yarn upgrade-interactive && yarn nx migrate latest",
     "workspace-schematic": "yarn nx workspace-schematic",
     "dep-graph": "yarn nx dep-graph",
-    "nexus:generate": "node tools/cli/esbuild.cjs && ls -al tools/cli/ && ls -al dist/ && ls -al dist/asdf/ && yarn env-cmd -f apps/bridge-api/.env node dist/asdf/bridge-api-nexus.cjs && ls -al tools/cli/ && ls -al dist/ && ls -al dist/asdf/ && cp -f dist/asdf/nexus.d.ts apps/bridge-api/src/generated/",
+    "nexus:generate": "node tools/cli/esbuild.cjs && ls -al tools/cli/ && ls -al dist/ && ls -al dist/asdf/ && yarn env-cmd -f apps/bridge-api/.env node dist/asdf/bridge-api-nexus.cjs && ls -al tools/cli/ && ls -al dist/ && ls -al dist/asdf/ && ls -al && ls -al apps/bridge-api/src && cp -f dist/asdf/nexus.d.ts apps/bridge-api/src/generated/",
     "bridge:generate": "prisma format && prisma generate && rimraf libs/graphql/crm-mutation && yarn dotenv-flow -p apps/bridge-api pal g && concurrently -n NEXUS,GRAPHQL-CODEGEN -c blue,yellow,green \"yarn nexus:generate\" \"yarn graphql-codegen:cached\"",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
     "postinstall": "patch-package --patch-dir tools/patches && husky install && yarn graphql-codegen:cached"
@@ -87,7 +87,8 @@
     "ts-node-dev/**/meow": ">=10.0.1",
     "**/cssnano": ">=5.0.6",
     "**/mini-css-extract-plugin": ">=1.6.0",
-    "eslint-plugin-graphql/**/graphql-config": "3.0.2"
+    "eslint-plugin-graphql/**/graphql-config": "3.0.2",
+    "@grapqhl-inspector/**/apollo-server-express": "2.2.6"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.19",
@@ -223,6 +224,7 @@
     "@graphql-codegen/typescript-operations": "2.0.1",
     "@graphql-codegen/typescript-react-apollo": "3.0.0",
     "@graphql-codegen/typescript-resolvers": "2.0.0",
+    "@graphql-inspector/cli": "2.6.1",
     "@ls-lint/ls-lint": "1.10.0",
     "@nestjs/cli": "7.5.6",
     "@nestjs/schematics": "7.3.0",
@@ -287,7 +289,6 @@
     "eslint-plugin-sonarjs": "0.9.1",
     "eslint-plugin-tsdoc": "0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
-    "graphql-inspector": "0.5.1",
     "husky": "5.2.0",
     "jest": "27.0.6",
     "jest-fail-on-console-reporter": "0.1.0",
