--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "nexus:generate": "node tools/cli/esbuild.cjs && ls -al tools/cli/ && ls -al dist/ && ls -al dist/asdf/ && yarn env-cmd -f apps/bridge-api/.env node dist/asdf/bridge-api-nexus.cjs --nexus-typegen && ls -al tools/cli/ && ls -al dist/ && ls -al dist/asdf/ && ls -al && ls -al apps/bridge-api/src && cp -f dist/asdf/nexus.d.ts apps/bridge-api/src/generated/",
     "bridge:generate": "prisma format && prisma generate && rimraf libs/graphql/crm-mutation && yarn dotenv-flow -p apps/bridge-api pal g && concurrently -n NEXUS,GRAPHQL-CODEGEN -c blue,yellow,green \"yarn nexus:generate\" \"yarn graphql-codegen:cached\"",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
-    "lint:graphql-inspector": "yarn graphql-inspector validate \"{libs,apps}/**/*.{graphql,tsx}\" hasura/schema.graphql",
+    "lint:graphql-inspector": "yarn graphql-inspector validate --noStrictFragments --apollo --deprecated \"{libs,apps}/**/*.{graphql,tsx}\" hasura/schema.graphql",
     "postinstall": "patch-package --patch-dir tools/patches && husky install && (yarn graphql-codegen:cached || (yarn lint:graphql-inspector && exit 1))"
   },
   "resolutions": {
