--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -24,7 +24,9 @@ pipelines:
           script:
             #            - while true; do ps -aux && sleep 30; done &
             - /bin/bash -c 'yarn audit --no-progress --non-interactive; [[ $? -lt 16 ]] && exit 0 || exit 1'
+            - ls -al .postmon-lock
             - CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --frozen-lockfile --prefer-offline
+            - rm -f .postmon-lock
           artifacts:
             - node_modules/**
             - libs/graphql/generated/**
@@ -192,7 +194,9 @@ pipelines:
           script:
             #            - while true; do ps -aux && sleep 30; done &
             - /bin/bash -c 'yarn audit --no-progress --non-interactive; [[ $? -lt 16 ]] && exit 0 || exit 1'
+            - ls -al .postmon-lock
             - CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --frozen-lockfile --prefer-offline
+            - rm -f .postmon-lock
           artifacts:
             - node_modules/**
             - libs/graphql/generated/**
