--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: hasura/schema.graphql
+schema: http://localhost:8080/v1/graphql
 documents: ['libs/graphql/**/*.graphql']
 generates:
   hasura/schema.json:
