--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "production:web": "env-cmd -f apps/web/.env.production yarn nx serve",
     "production:start": "yarn nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
-    "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:workspace && yarn nx affected --all --target=tsc --parallel --skip-nx-cache && yarn nx affected --all --target=lint --parallel --skip-nx-cache && yarn nx affected --all --target=test --parallel --skip-nx-cache",
+    "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:workspace && yarn nx affected --all --target=tsc --parallel && yarn nx affected --all --target=lint --parallel && yarn nx affected --all --target=test --parallel",
     "pipeline-checks:slow": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn lint:workspace && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
     "pipeline-checks:parallel": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=3 --kill-others-on-fail -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\"",
     "pipeline-checks:insane": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=4 -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\" \"yarn nx affected --all --target=build --parallel\"",
@@ -90,26 +90,26 @@
     "eslint-plugin-graphql/**/graphql-config": "3.0.2"
   },
   "dependencies": {
-    "@anchan828/nest-sendgrid": "0.4.19",
+    "@anchan828/nest-sendgrid": "0.5.7",
     "@ant-design/icons": "4.6.2",
-    "@apollo/client": "3.3.21",
+    "@apollo/client": "3.4.7",
     "@babel/plugin-transform-object-assign": "7.12.13",
     "@babel/plugin-transform-react-jsx-source": "7.12.13",
     "@babel/runtime": "7.14.6",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@fortawesome/react-fontawesome": "0.1.14",
-    "@nestjs/common": "7.6.15",
-    "@nestjs/config": "0.6.3",
-    "@nestjs/core": "7.6.15",
-    "@nestjs/platform-express": "7.6.15",
-    "@paljs/cli": "3.6.0",
-    "@paljs/nexus": "3.3.3",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/react-fontawesome": "0.1.15",
+    "@nestjs/common": "8.0.6",
+    "@nestjs/config": "1.0.1",
+    "@nestjs/core": "8.0.6",
+    "@nestjs/platform-express": "8.0.6",
+    "@paljs/cli": "3.8.1",
+    "@paljs/nexus": "3.8.0",
     "@prisma/client": "2.29.0",
     "@react-hook/debounce": "4.0.0",
-    "@sendgrid/mail": "7.4.5",
-    "@sentry/react": "6.10.0",
-    "@sentry/tracing": "6.10.0",
+    "@sendgrid/mail": "7.4.6",
+    "@sentry/react": "6.11.0",
+    "@sentry/tracing": "6.11.0",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
     "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
@@ -133,14 +133,14 @@
     "google-libphonenumber": "3.2.22",
     "graphql": "15.5.1",
     "graphql-middleware": "6.0.10",
-    "graphql-scalars": "1.9.3",
+    "graphql-scalars": "1.10.0",
     "graphql-shield": "7.5.0",
-    "highcharts": "9.0.1",
+    "highcharts": "9.1.2",
     "highcharts-react-official": "3.0.0",
-    "html-to-image": "1.6.1",
-    "i18n-iso-countries": "6.7.0",
-    "i18next": "20.2.2",
-    "i18next-browser-languagedetector": "6.1.0",
+    "html-to-image": "1.7.0",
+    "i18n-iso-countries": "6.8.0",
+    "i18next": "20.4.0",
+    "i18next-browser-languagedetector": "6.1.2",
     "i18next-xhr-backend": "3.2.2",
     "inflected": "2.1.0",
     "jsonwebtoken": "8.5.1",
@@ -153,54 +153,54 @@
     "next": "10.0.9",
     "next-images": "1.7.0",
     "next-plugin-antd-less": "0.3.0",
-    "nexus": "1.0.0",
+    "nexus": "1.1.0",
     "node-fetch": "2.6.1",
-    "open-cli": "6.0.1",
+    "open-cli": "7.0.0",
     "preferred-locale": "1.0.10",
-    "r7insight_node": "2.1.1",
-    "rc-queue-anim": "1.8.5",
+    "r7insight_node": "3.2.0",
+    "rc-queue-anim": "2.0.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-color": "2.19.3",
     "react-confetti": "6.0.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-countdown": "2.3.2",
-    "react-cropper": "2.1.7",
+    "react-cropper": "2.1.8",
     "react-custom-scrollbars": "4.2.1",
     "react-device-detect": "1.17.0",
     "react-dom": "17.0.2",
     "react-draft-wysiwyg": "1.14.7",
     "react-google-maps": "9.4.5",
-    "react-google-places-autocomplete": "3.3.0",
-    "react-grid-layout": "1.2.4",
+    "react-google-places-autocomplete": "3.3.2-alpha.0",
+    "react-grid-layout": "1.2.5",
     "react-highlight-words": "0.17.0",
     "react-html-parser": "2.0.2",
-    "react-i18next": "11.8.13",
-    "react-image-crop": "8.6.9",
+    "react-i18next": "11.11.4",
+    "react-image-crop": "8.6.12",
     "react-indiana-drag-scroll": "2.0.1",
-    "react-jsx-highcharts": "4.2.1",
+    "react-jsx-highcharts": "4.3.1",
     "react-lottie": "1.2.3",
-    "react-number-format": "4.5.5",
-    "react-pdf": "5.2.0",
+    "react-number-format": "4.7.3",
+    "react-pdf": "5.3.2",
     "react-phone-input-2": "2.14.0",
     "react-quill": "1.3.5",
     "react-signature-canvas": "1.0.3",
-    "react-sortable-hoc": "1.11.0",
+    "react-sortable-hoc": "2.0.0",
     "react-string-replace": "0.4.4",
     "react-use": "17.2.4",
     "react-vertical-timeline-component": "3.3.3",
     "recompose": "0.30.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.6.7",
+    "rxjs": "7.3.0",
     "sql-template-tag": "4.0.0",
     "storybook-addon-i18next": "1.3.0",
     "string-to-color": "2.2.2",
-    "stripe": "8.168.0",
-    "subscriptions-transport-ws": "0.9.18",
+    "stripe": "8.169.0",
+    "subscriptions-transport-ws": "0.9.19",
     "ts-node-dev": "1.1.8",
     "tslib": "2.2.0",
     "uuid": "8.3.2",
-    "wait-on": "5.3.0",
+    "wait-on": "6.0.0",
     "yup": "0.32.9"
   },
   "devDependencies": {
@@ -223,59 +223,59 @@
     "@graphql-codegen/typescript-react-apollo": "3.0.0",
     "@graphql-codegen/typescript-resolvers": "2.0.0",
     "@ls-lint/ls-lint": "1.10.0",
-    "@nestjs/cli": "7.5.6",
-    "@nestjs/schematics": "7.3.0",
-    "@nestjs/testing": "7.6.15",
-    "@nrwl/cli": "12.6.5",
-    "@nrwl/cypress": "12.6.5",
-    "@nrwl/eslint-plugin-nx": "12.6.5",
-    "@nrwl/jest": "12.6.5",
-    "@nrwl/linter": "12.6.5",
-    "@nrwl/nest": "12.6.5",
-    "@nrwl/next": "12.6.5",
-    "@nrwl/node": "12.6.5",
-    "@nrwl/react": "12.6.5",
-    "@nrwl/storybook": "12.6.5",
-    "@nrwl/tao": "12.6.5",
-    "@nrwl/web": "12.6.5",
-    "@nrwl/workspace": "12.6.5",
-    "@storybook/addon-a11y": "6.3.2",
-    "@storybook/addon-essentials": "6.3.2",
-    "@storybook/addon-storysource": "6.3.2",
-    "@storybook/react": "6.3.2",
+    "@nestjs/cli": "8.1.1",
+    "@nestjs/schematics": "8.0.2",
+    "@nestjs/testing": "8.0.6",
+    "@nrwl/cli": "12.7.1",
+    "@nrwl/cypress": "12.7.1",
+    "@nrwl/eslint-plugin-nx": "12.7.1",
+    "@nrwl/jest": "12.7.1",
+    "@nrwl/linter": "12.7.1",
+    "@nrwl/nest": "12.7.1",
+    "@nrwl/next": "12.7.1",
+    "@nrwl/node": "12.7.1",
+    "@nrwl/react": "12.7.1",
+    "@nrwl/storybook": "12.7.1",
+    "@nrwl/tao": "12.7.1",
+    "@nrwl/web": "12.7.1",
+    "@nrwl/workspace": "12.7.1",
+    "@storybook/addon-a11y": "6.3.7",
+    "@storybook/addon-essentials": "6.3.7",
+    "@storybook/addon-storysource": "6.3.7",
+    "@storybook/react": "6.3.7",
     "@testing-library/react": "11.2.6",
     "@types/dotenv-flow": "3.1.1",
     "@types/googlemaps": "3.43.3",
     "@types/jest": "26.0.24",
-    "@types/jsonwebtoken": "8.5.1",
-    "@types/node": "15.0.2",
+    "@types/jsonwebtoken": "8.5.4",
+    "@types/node": "16.6.0",
     "@types/pluralize": "0.0.29",
     "@types/react": "17.0.5",
     "@types/react-custom-scrollbars": "4.0.7",
     "@types/react-dom": "17.0.4",
     "@types/react-grid-layout": "1.1.1",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
-    "@vercel/node": "1.11.1",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "@typescript-eslint/parser": "4.29.1",
+    "@vercel/node": "1.12.1",
     "apollo-server-testing": "2.24.0",
     "atob": "2.1.2",
     "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
     "bitbucket": "2.6.2",
-    "concurrently": "6.1.0",
-    "cypress": "6.9.1",
+    "concurrently": "6.2.1",
+    "cypress": "8.2.0",
     "danger": "10.6.6",
-    "dotenv": "9.0.2",
+    "dotenv": "10.0.0",
     "dotenv-flow-cli": "1.0.0",
-    "esbuild": "0.12.18",
+    "esbuild": "0.12.19",
     "esbuild-node-externals": "1.3.0",
     "eslint": "7.32.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
-    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-import": "2.24.0",
     "eslint-plugin-json-format": "2.0.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
@@ -286,17 +286,17 @@
     "eslint-plugin-tsdoc": "0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
     "graphql-inspector": "0.5.1",
-    "husky": "5.2.0",
+    "husky": "7.0.1",
     "jest": "27.0.6",
     "jest-fail-on-console-reporter": "0.1.0",
     "jest-silent-reporter": "0.5.0",
-    "lint-staged": "11.0.0",
+    "lint-staged": "11.1.2",
     "micromatch": "4.0.4",
-    "next-page-tester": "0.24.1",
+    "next-page-tester": "0.27.2",
     "nodemon": "2.0.12",
     "patch-package": "6.4.7",
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
-    "postmon": "0.0.6",
+    "postmon": "0.1.1",
     "prettier": "2.2.1",
     "prisma": "2.29.0",
     "react-cookie": "4.0.3",
@@ -308,7 +308,7 @@
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.3.5",
-    "vercel": "23.0.1",
+    "vercel": "23.1.2",
     "yaml-loader": "0.6.0"
   },
   "bump-rebuild-all": 52,
