--- a/package.json
+++ b/package.json
@@ -286,6 +286,7 @@
     "eslint-plugin-tsdoc": "0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
     "graphql-inspector": "0.5.1",
+    "hasura-cli": "^2.0.5",
     "husky": "5.2.0",
     "jest": "27.0.6",
     "jest-fail-on-console-reporter": "0.1.0",
@@ -298,7 +299,7 @@
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
     "postmon": "0.0.6",
     "prettier": "2.2.1",
-    "prisma": "2.29.0",
+    "prisma": "^2.29.0",
     "react-cookie": "4.0.3",
     "react-docgen-typescript": "1.22.0",
     "react-test-renderer": "17.0.2",
