--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "serve": "yarn nx serve",
     "apollo": "ts-node tools/cli/apollo.ts",
     "build:bridge-api": "yarn nx export bridge-api",
+    "testt": "ls fdsfdsfdfds || echo dieded",
     "hasura:cli": "ts-node tools/cli/hasura.ts",
-    "hasura:refresh-metadata": "ts-node tools/cli/hasura-refresh-metadata.ts",
+    "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || ts-node tools/cli/hasura-refresh-metadata.ts",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules yarn.lock package-lock.json dist coverage",
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
@@ -26,7 +27,7 @@
     "connect:start": "nx serve connect --port=4400",
     "start": "yarn dev",
     "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,LAUNCH-BROWSER -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\"",
-    "dev2": "concurrently -m 16 --kill-others-on-fail -n DOCKER,PRISMA,HASURA-METADATA,WEB,LAUNCH-BROWSER -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn mysql:start && yarn hasura:start\" \"yarn bridge:start2\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on http://localhost:4200 && wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on -w 1200 tcp:9695 && open-cli \\\"http://web.localhost:4200\\\"\" ",
+    "dev2": "concurrently -m 16 --kill-others-on-fail -n DOCKER,PRISMA,HASURA-METADATA,WEB,LAUNCH-BROWSER -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn mysql:start && yarn hasura:start\" \"yarn bridge:start2\" \"wait-on -w 1200 \\\"http-get://localhost:4000\\\" && echo BRIDGE NOW ALIVE && wait-on -w 1200 \\\"http-get://localhost:8080/console\\\" && echo HASURA AND BRIDGE ALIVE && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on http://localhost:4200 && wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on -w 1200 tcp:9695 && open-cli \\\"http://web.localhost:4200\\\"\" ",
     "dev:connect": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c red,red,green,blue,grey,grey,magenta \"delay 5 && yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"delay 22 && wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"delay 25 && yarn connect:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"yarn nx serve web\" \"yarn nx serve bridge-api\"",
     "bridge:start": "yarn nx serve bridge-api",
